# dougu

./: .dockerignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
docker/: Dockerfile  docker-compose.yaml
dougu/: __init__.py  bq.py  embedding.py  gcs.py  iterators.py  lm.py  log.py  logs.py  read.py  s3.py  time.py  timer.py  tokenizers.py  visualize.py
tests/: test_embedding.py  test_import.py  test_read.py  test_timer.py  test_tokenizer.py  test_visualize.py
tests/samples/: sample.glove.txt  sample.jsonl  sample.spm  sample.word2vec.txt  sample.yaml
